--- a/pages/components/checkbox.html
+++ b/pages/components/checkbox.html
@@ -14,7 +14,6 @@
   <p>required - static (optional). Default: false. Indicates whether the component is required.</p>
   <p>checked - reactive (optional). Default: false. Controls the checked state of the component.</p>
   <p>disabled - reactive (optional). Default: false. Controls the disabled state of the component.</p>
-  <p>shape - static (optional). Default: rounded. Available options: rounded, circle, square. Sets the corner style.</p>
 </section>
 
 <section class="content">
@@ -32,29 +31,6 @@
 
 <pre><code>
 &lt;ui-checkbox&gt;&lt;/ui-checkbox&gt;
-</code></pre>
-
-      </div>
-    </div>
-  </div>
-
-  <div class="content-item">
-    <div>Shape (default: rounded)</div>
-    <div class="example">
-      <div class="preview">
-        <ui-checkbox shape="rounded"></ui-checkbox>
-        <ui-checkbox shape="circle"></ui-checkbox>
-        <ui-checkbox shape="square"></ui-checkbox>
-      </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
-
-<pre><code>
-&lt;ui-checkbox shape="rounded"&gt;&lt;/ui-checkbox&gt;
-&lt;ui-checkbox shape="circle"&gt;&lt;/ui-checkbox&gt;
-&lt;ui-checkbox shape="square"&gt;&lt;/ui-checkbox&gt;
 </code></pre>
 
       </div>
@@ -84,7 +60,7 @@
     <div>Disabled</div>
     <div class="example">
       <div class="preview">
-        <ui-checkbox disabled></ui-checkbox>
+        <ui-checkbox disabled id="e"></ui-checkbox>
       </div>
       <div class="toolbar">
         <span>HTML</span>
