--- a/pages/components/switch.html
+++ b/pages/components/switch.html
@@ -5,11 +5,11 @@
 
 <section class="details">
   <h2>Attributes</h2>
-  <p>aria-label — static (required). If used outside of the <a href="#field">field</a> component, the aria-label must be set manually.</p>
-  <p>checked — reactive (required). Default: false. Controls the checked state of the component.</p>
-  <p>disabled — reactive (optional). Controls the disabled state of the component.</p>
-  <p>required — static (optional). Indicates whether the component is required.</p>
-  <p>shape — static (optional). Default: pill. Available options: pill, square. Sets the corner style.</p>
+  <p>aria-label - static (required). If used outside of the <a href="#field">field</a> component, the aria-label must be set manually.</p>
+  <p>checked - reactive (required). Default: false. Controls the checked state of the component.</p>
+  <p>disabled - reactive (optional). Controls the disabled state of the component.</p>
+  <p>required - static (optional). Indicates whether the component is required.</p>
+  <p>shape - static (optional). Default: pill. Available options: pill, square. Sets the corner style.</p>
 </section>
 
 <section class="content">
@@ -27,28 +27,6 @@
 
 <pre><code>
 &lt;ui-switch&gt;&lt;/ui-switch&gt;
-</code></pre>
-
-      </div>
-    </div>
-  </div>
-
-  <div class="content-item">
-    <div>Shapes</div>
-    <div class="example">
-      <div class="preview">
-        <ui-switch></ui-switch>
-        <ui-switch shape="square"></ui-switch>
-      </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
-
-<pre><code>
-&lt;ui-switch&gt;&lt;/ui-switch&gt;
-
-&lt;ui-switch shape="square"&gt;&lt;/ui-switch&gt;
 </code></pre>
 
       </div>
