--- a/pages/components/checkbox.html
+++ b/pages/components/checkbox.html
@@ -19,7 +19,7 @@
 <section class="content">
 
   <div class="content-item">
-    <div>Default</div>
+    <h3>Default</h3>
     <div class="example">
       <div class="preview">
         <ui-checkbox></ui-checkbox>
