--- a/pages/components/label.html
+++ b/pages/components/label.html
@@ -11,9 +11,9 @@
 
 <section class="details">
   <h2>Attributes</h2>
-  <p>passive — static (optional). Sets the cursor to default, giving the impression that the element is not interactive.</p>
-  <p>required — static (optional). Indicates whether the associated form control is required.</p>
-  <p>indicator — static (optional). Default: *. Overrides the default required indicator. The indicator is added only if the 'required' attribute is present. It can be either a single character or a string.</p>
+  <p>passive - static (optional). Sets the cursor to default, giving the impression that the element is not interactive.</p>
+  <p>required - static (optional). Indicates whether the associated form control is required.</p>
+  <p>indicator - static (optional). Default: *. Overrides the default required indicator. The indicator is added only if the 'required' attribute is present. It can be either a single character or a string.</p>
 </section>
 
 <section class="content">
