--- a/pages/components/tabs.html
+++ b/pages/components/tabs.html
@@ -12,9 +12,9 @@
 
 <section class="details">
   <h2>Attributes</h2>
-  <h3>Tabs</h3>
+  <span><strong>Tabs:</strong></span>
   <p>vertical - static (optional). Sets the orientation of the tabs in the tablist to vertical.</p>
-  <h3>Tab</h3>
+  <span><strong>Tab:</strong></span>
   <p>disabled - static (optional). Controls whether the tab is disabled.</p>
 </section>
 
