--- a/ui/components/accordion/accordion.css
+++ b/ui/components/accordion/accordion.css
@@ -25,7 +25,7 @@ ui-accordion{
   width:100%;
   border-radius:var(--ui-accordion-border-radius);
 
-  & > [data-index]{
+  & > ui-accordion-item{
     border-radius:inherit;
     width:100%;
     background-color:var(--ui-accordion-surface-color);
